fixing footer spacing issue & other css bugs

--- a/src/styles/BlockRelatedWork.scss
+++ b/src/styles/BlockRelatedWork.scss
@@ -1,4 +1,9 @@
 .block-related{
   position: relative;
   background: #fff;
+  padding-top: 12em;
+  
+  h1{
+    margin-bottom: 15px;
+  }
 }
