--- a/src/styles/Cursor.scss
+++ b/src/styles/Cursor.scss
@@ -47,7 +47,7 @@
   transform: translate(-50%, -50%);
   z-index: 999;
   pointer-events: none;
-  mix-blend-mode: difference;
+  mix-blend-mode: darken;
   
   @media(max-width: $mobile){
     display: none;
@@ -63,4 +63,10 @@
 
 .dot.hovered {
   display: none;
+}
+
+.dark{
+  .dot{
+    mix-blend-mode: screen;
+  }
 }
