--- a/src/styles/navigation.scss
+++ b/src/styles/navigation.scss
@@ -2,6 +2,7 @@
 
 header{
     position: fixed;
+    display: flex;
     top: 0;
     left: 0;
     width: 100%;
@@ -22,11 +23,11 @@ header{
     display: flex;
     flex-direction: row;
     height: 100px;
-    width: calc(100% - 70px);
+    width: 100%;
     justify-content: space-between;
     align-items: center;
     margin: auto;
-    padding: 0 35px;
+    padding: 0 20px;
     transform: translateY(0px);
     transition: 0.2s ease;
 
@@ -66,6 +67,7 @@ header{
         height: auto;
         padding: 0px;
         list-style: none;
+        margin-left: 0em;
     }
 
     .nav-link {
